Fixed font size and notify text wrap

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -33,9 +33,9 @@
   --gap-form: var(--space-2);
   --shadow-lg: 0px 0.625rem 1.25rem rgba(0, 0, 0, 0.3);
 
-  --font-small: 0.8rem;
+  --font-small: 0.9rem;
   --font-medium: 1rem;
-  --font-big: 3rem;
+  --font-big: 2.6rem;
 }
 
 * {
@@ -1380,6 +1380,12 @@ input::placeholder {
   color: var(--red);
 }
 
+.features_section {
+  max-height: 100%;
+  min-height: 100vh;
+  height: 100vh;
+}
+
 /* === Utility Classes for Unified Style === */
 .flex {
   display: flex;
@@ -1605,6 +1611,39 @@ input::placeholder {
 }
 
 @media screen and (max-width: 43.75rem) {
+  .download_app {
+    height: 100%;
+    max-height: 100%;
+    min-height: 100%;
+    margin-top: 100px;
+    margin-bottom: 100px;
+  }
+
+  .notify {
+    text-wrap: wrap;
+    height: auto;
+    white-space: wrap;
+    overflow: none;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .features_section {
+    max-height: 100%;
+    min-height: 100%;
+    height: 100%;
+    margin-top: 100px;
+    margin-bottom: 100px;
+  }
+
+  .enhanced-content {
+    max-height: 100%;
+    min-height: 100%;
+    height: 100%;
+    margin-top: 100px;
+    margin-bottom: 100px;
+  }
+
   html {
     font-size: var(--font-small);
   }
